--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: linear-gradient(
+    to bottom right,
+    #eff6ff,
+    #ffffff,
+    #fffbeb
+  ) !important;
+}
