--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-image: linear-gradient(
-    to bottom right,
-    #eff6ff,
-    #ffffff,
-    #fffbeb
-  ) !important;
+.bg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  padding: 0 2rem;
+  background-color: #fff;
+  background-image: radial-gradient(
+      at 44% 0%,
+      rgba(255, 184, 122, 0.4) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 80% 0%, rgba(31, 221, 255, 0.1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgba(255, 133, 173, 0.1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, rgba(255, 181, 138, 0) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, rgba(107, 102, 255, 0) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgba(255, 133, 167, 0.25) 0px, transparent 50%);
 }
